Multiselect overflow-y potentiell fix

--- a/resources/assets/sass/partials/_general.scss
+++ b/resources/assets/sass/partials/_general.scss
@@ -151,3 +151,7 @@ table{
 .toggle-hide{
     display: none;
 }
+
+select[multiple] {
+    overflow-y: scroll;
+}
